# scripts

./: CMakeLists.txt  Makefile.fortran  all_installv4.sh  do-config_cuda_openmpi_bridges.sh  do-config_cuda_openmpi_comet.sh  do-config_cuda_openmpi_hansen.sh  do-config_lapack.sh  do-config_openmp_knl.sh  do-config_pthreads_knl.sh  do-config_tri_taxila  input_param.xml  precond.xml
gen_particle3d/: DESParticleGen.f  Pgen.in  compile_run.sh  gen3d.f
